# gitingest

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Procfile  README.md  click2.py  config.yaml  config_manager.py  current_help.txt  deployment.md  docker-compose.yml  entrypoint.sh  heroku-guide.md  package-lock.json  package.json  pyproject.toml  repomix-output.txt  requirements-dev.txt  requirements.in  requirements.txt  setup-heroku.sh  setup.py  smart_analysis.py  test.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  scorecard.yml  unitest.yml
docs/: CHANGELOG.md
src/: cli.py  config.py  config_manager.py  hello  ingest.py  main.py  process_query.py  query_processor.py
src/CodeIngest/: __init__.py  cli.py  cloning.py  config.py  entrypoint.py  ingestion.py  output_formatters.py  query_parsing.py
src/CodeIngest/schemas/: __init__.py  filesystem_schema.py  ingestion_schema.py
src/CodeIngest/utils/: notebook_utils.py  timeout_wrapper.py
src/core/: notebook_utils.py  query_ingestion.py  query_parser.py  repository_clone.py  repository_ingest.py  utils.py
src/gitingest/: __init__.py  __main__.py  cli.py  clone.py  cloning.py  config.py  embedding.py  entrypoint.py  exceptions.py  filesystem_schema.py  ignore_patterns.py  ingest.py  ingest_from_query.py  ingestion.py  ingestion_schema.py  notebook_utils.py  output_formatter.py  output_formatters.py  output_utils.py  parse_query.py  pull_request_ingest.py  query_ingestion.py  query_parser.py  query_parsing.py  rag_chatbot.py  repository_clone.py  repository_ingest.py  streaming.py  utils.py
src/gitingest/cache/: __init__.py  disk_cache.py
src/gitingest/chunking/: __init__.py  chunker.py  language_registry.py
src/gitingest/chunking/languages/: go.scm  javascript.scm  python.scm
src/gitingest/parallel/: __init__.py  walker.py  workers.py
src/gitingest/schemas/: __init__.py  filesystem_schema.py  ingestion.py  ingestion_schema.py
src/gitingest/security/: path_safety.py  secret_scan.py
src/gitingest/tests/: test_chatbot_endpoints.py  test_clone.py  test_embedding.py  test_ingest.py  test_parse_query.py  test_rag_chatbot.py
src/gitingest/utils/: __init__.py  async_compat.py  auth.py  click_validation_utils.py  config_utils.py  exceptions.py  file_utils.py  git_utils.py  ignore_patterns.py  ingestion_utils.py  notebook_utils.py  os_utils.py  path_utils.py  query_parser_utils.py  textfile_checker_utils.py  timeout_wrapper.py
src/routers/: chatbot.py  dynamic.py  index.py
src/server/: __init__.py  main.py  models.py  oauth.py  query_processor.py  server_config.py  server_utils.py
src/server/routers/: __init__.py  download.py  dynamic.py  index.py  ingest.py  metrics.py
src/server/templates/: api.jinja  base.jinja  git.jinja  index.jinja  tokencount.jinja  tokencount_api.jinja
src/server/templates/components/: _macros.jinja  footer.jinja  git_form.jinja  navbar.jinja  result.jinja
src/static/: llm.txt  robots.txt
src/static/js/: snow.js  utils.js
src/templates/: base.jinja  github.jinja  index.jinja
src/templates/components/: footer.jinja  github_form.jinja  navbar.jinja  result.jinja
src/utils/: parse_query.py  parse_url.py
tests/: conftest.py  test_chunker_py_js.py  test_chunker_python.py  test_cli.py  test_cli_flags.py  test_cli_validation.py  test_clone.py  test_cloning.py  test_flow_integration.py  test_format_node.py  test_git_utils.py  test_gitignore_feature.py  test_gitingest_config.py  test_gzip_output.py  test_incremental_cache.py  test_ingestion.py  test_notebook_utils.py  test_parallel_equivalence.py  test_parse_query.py  test_path_safety.py  test_perf_features.py  test_query_ingestion.py  test_query_parser.py  test_query_parsing.py  test_recursion_limit.py  test_repository_clone.py  test_secret_redaction.py  test_server.py  test_server_oauth.py  test_static_regression.py  test_streaming.py
tests/core/: test_notebook_utils.py  test_query_ingestion.py  test_repository_clone.py
tests/core/query_parser/: test_git_host_agnostic.py  test_query_parser.py
tests/query_parser/: test_git_host_agnostic.py  test_query_parser.py
tests/sample_source/: hello.js  simple.py
tests/samples/: simple.py
